--- a/ch6_sorting.ipynb
+++ b/ch6_sorting.ipynb
@@ -230,7 +230,7 @@
     "* 메모리 제한 256MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 기본 정렬이랑 람다 함수 잘 이용해서 하면 될 듯"
    ]
   },
   {
@@ -239,18 +239,51 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* 정렬하는 데 O(NlogN), 반복문 돌릴 때 O(N)이므로 시간복잡도는 대략 O(NlogN)이 되고, N은 최대 100,000이므로 1초 내에 해결이 가능할 것\n",
+    "* 다만 입력값도 최대 100,000개가 들어올 수 있으므로 빡빡할 수도 있다\n",
+    "    * sys.stdin.readline()을 활용하면 훨씬 빠르다\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 처음에 내 코드에서 시간초과가 떠서 답지처럼 반복문에서 변수 받아올 때 리스트로 받아와서 인덱싱으로 출력하니 통과, 근데 다시 내껄로 해보니 내 코드가 더 빨리 통과됐다... 그냥 잠깐 통신에 문제가 있었나보다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Donghyuk\n",
+      "Sangkeun\n",
+      "Sunyoung\n",
+      "nsj\n",
+      "Wonseob\n",
+      "Sanghyun\n",
+      "Sei\n",
+      "Kangsoo\n",
+      "Haebin\n",
+      "Junkyu\n",
+      "Soong\n",
+      "Taewhan\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 학생 수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 학생 정보 입력\n",
+    "students = []\n",
+    "for _ in range(N):\n",
+    "    name, kor, eng, math = input().split()\n",
+    "    students.append((name, int(kor), int(eng), int(math)))\n",
+    "    \n",
+    "for name, kor, eng, math in sorted(students, key= lambda student: (-student[1], student[2], -student[3], student[0])):\n",
+    "    print(name)"
+   ]
   },
   {
    "attachments": {},
@@ -272,7 +305,7 @@
     "* 메모리 제한 256MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* (기억의 저편) 제시된 숫자들 중 중앙값 위치의 집에 설치하면 된다."
    ]
   },
   {
@@ -281,25 +314,46 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* O(NlogN). N은 최대 200,000.\n",
+    "* 대충 파이썬에선 N이 100,000 이하일 때 NlogN이 먹힌다고 하는데, 이 경우 일단 시간 내에 해결이 되긴 한다. 200,000정도 까지는 조건에 따라 가능하긴한듯?\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 이전 풀이에선 아예 진짜 중앙값을 구해서 location에다 반복문을 돌리면서 진짜 중앙값과 가장 가까운 값(여러 개라면 더 작은 값)을 찾고, 해당 값을 출력하는 식으로 풀었다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 집의 수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 집의 위치 정보 입력\n",
+    "location = list(map(int, input().split()))\n",
+    "\n",
+    "# 집 위치 정보를 오름차순 정렬\n",
+    "location.sort()\n",
+    "\n",
+    "# 중앙값의 위치(집의 개수가 짝수라면 작은 쪽)에 있는 집 번호를 출력\n",
+    "print(location[(len(location)-1)//2])"
+   ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q25. 실패율\n",
+    "## Q25. 실패율 // RE(풀이 시간 초과)\n",
     "https://school.programmers.co.kr/learn/courses/30/lessons/42889"
    ]
   },
@@ -314,7 +368,9 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* stages를 돌면서 각 스테이지에 정체되어 있는 사람수를 세어 계수 정렬한 리스트를 만들고, 실패율을 담을 리스트를 만든다\n",
+    "* N+1번째 스테이지부터 1번째 스테이지까지 역순으로 확인하며 (해당 스테이지에 머물러 있는 사람) 값을 더해나가며, (해당 스테이지에 머물러 있는 사람) / (현재까지의 스테이지에 머물러 있는 사람의 합) 을 계산하여 각 스테이지의 실패율을 구함\n",
+    "* 실패율에 enumerate 돌려 해당 스테이지를 구하고 문제 조건에 맞게 정렬한 뒤 스테이지만 빼와서 리스트로 만들어 리턴"
    ]
   },
   {
@@ -323,10 +379,66 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* 반복문만 보면 (stages의 길이) + N + NlogN + N 번의 연산\n",
+    "* stages의 길이는 최대 200,000이고, N은 최대 500이므로 1초 내에 충분히 해결 가능\n",
+    "* 시간 복잡도는 O(stages의 길이 + NlogN)가 될 것 같다.\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 답지는 나랑 반대로 1스테이지부터 시작하여 전체 유저수에서 빼는 방식으로 실패율을 계산해나갔다.\n",
+    "* 리스트 구성을 좀 더 잘했으면 더 효율적인 코드가 되었을 것 같다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N= 4\n",
+    "stages = [4, 4, 4, 4, 4]\n",
+    "\n",
+    "def solution(N, stages):\n",
+    "    stay = [0] * (N + 2)\n",
+    "    for stage in stages:\n",
+    "        stay[stage] += 1\n",
+    "    \n",
+    "    failure_rate = [0] * (N+2)\n",
+    "    \n",
+    "    total = 0\n",
+    "    for i in range(N+1, 0, -1):\n",
+    "        total += stay[i]\n",
+    "        \n",
+    "        if total == 0:\n",
+    "            failure_rate[i] = 0\n",
+    "        else:\n",
+    "            failure_rate[i] = stay[i] / total\n",
+    "\n",
+    "    answer = []\n",
+    "    for f, i in sorted([(f, i) for i, f in enumerate(failure_rate[1:-1], start=1)], key=lambda x: -x[0]):\n",
+    "        answer.append(i)\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "solution(N, stages)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
    ]
   },
   {
@@ -334,7 +446,61 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(N, stages):\n",
+    "    answer = []\n",
+    "    length = len(stages)\n",
+    "    \n",
+    "    # 스테이지 번호를 1부터 N까지 증가시키며\n",
+    "    for i in range(1, N+1):\n",
+    "        # 해당 스테이지에 머물러 있는 사람의 수 계산\n",
+    "        count = stages.count(i)\n",
+    "        \n",
+    "        # 실패율 계산\n",
+    "        if length == 0:\n",
+    "            fail = 0\n",
+    "        else:\n",
+    "            fail = count / length\n",
+    "            \n",
+    "        # 리스트에 (스테이지 번호, 실패율) 원소 삽입\n",
+    "        answer.append((i, fail))\n",
+    "        length -= count\n",
+    "        \n",
+    "    # 실패율을 기준으로 각 스테이지를 내림차순 정렬\n",
+    "    answer = sorted(answer, key=lambda t: t[1], reverse=True)\n",
+    "    \n",
+    "    # 정렬된 스테이지 번호 출력\n",
+    "    answer = [i[0] for i in answer]\n",
+    "    return answer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이전 풀이 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(N, stages):\n",
+    "  failure_rate = []\n",
+    "  \n",
+    "  total_failure = [0]*(N+1)\n",
+    "  \n",
+    "  for fail_stage in stages:\n",
+    "    total_failure[fail_stage-1] += 1\n",
+    "    \n",
+    "  for i in range(N):\n",
+    "    failure_rate.append((i+1, total_failure[i]/sum(total_failure[i:]) if sum(total_failure[i:]) !=0 else 0))\n",
+    "  \n",
+    "  return [stage for stage, rate in sorted(failure_rate, key=lambda x: (-x[1], x[0]))]"
+   ]
   },
   {
    "attachments": {},
