resolve Q26 & update readme

--- a/ch6_sorting.ipynb
+++ b/ch6_sorting.ipynb
@@ -522,7 +522,9 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 매번 묶음에서 작은 것 두 개를 골라 묶는 게 최적해가 된다.\n",
+    "* 내림차순 정렬 + .pop() + .append() 사용해서 풀어보자 => 시간 초과...\n",
+    "* (기억의 저편) heapq를 쓰면 빨랐나...?"
    ]
   },
   {
@@ -531,10 +533,102 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* heapify()가 O(N)이고 heappop()과 heappush()가 O(logN)이라고 한다.\n",
+    "* N의 최댓값은 100,000\n",
+    "* 리스트로 하면 매 반복마다 sort를 하여 O(N * NlogN)이 돼서 시간 초과가 나는 건가?\n",
+    "* 최소힙으로 하면 N + N * 3 * logN이니 O(NlogN)으로 2초 내에 해결이 가능하겠다.\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 잘 풀었다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 그냥 리스트로 푼 것 => 시간 초과\n",
+    "\n",
+    "# 카드 묶음 개수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 카드 묶음 크기 정보 입력\n",
+    "decks = []\n",
+    "for _ in range(N):\n",
+    "    decks.append(int(input()))\n",
+    "\n",
+    "total = 0\n",
+    "while True:\n",
+    "    decks.sort(reverse=True)\n",
+    "    s1 = decks.pop()\n",
+    "    try:\n",
+    "        s2 = decks.pop()\n",
+    "        total += (s1 + s2)\n",
+    "        decks.append(s1 + s2)\n",
+    "    except:\n",
+    "        break\n",
+    "\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "## heap 사용\n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "# 카드 묶음 개수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 카드 묶음 크기 정보 입력\n",
+    "decks = []\n",
+    "for _ in range(N):\n",
+    "    decks.append(int(input()))\n",
+    "    \n",
+    "# 힙 자료구조를 이용하여 리스트를 우선순위큐로 변환\n",
+    "heapq.heapify(decks)\n",
+    "\n",
+    "total = 0 # 전체 비교 횟수 담을 변수 선언\n",
+    "while True:\n",
+    "    s1 = heapq.heappop(decks) # 가장 작은 카드 묶음 꺼내기\n",
+    "    if not decks: # 하나 꺼냈을 때 덱이 비게 된다면\n",
+    "        break # 전부 합친 것이므로 반복 중단\n",
+    "    s2 = heapq.heappop(decks) # 아니라면 다시 가장 작은 카드 묶음 꺼내기\n",
+    "    total += (s1 + s2) # 전체 비교 횟수에 두 카드 묶음의 합을 추가\n",
+    "    heapq.heappush(decks, s1 + s2) # 덱에 두 카드 묶음을 합쳐서 넣기\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(total)\n",
+    "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이전 풀이 & 해설 코드 참고"
    ]
   },
   {
@@ -542,7 +636,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import heapq\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "# 힙(heap)에 초기 카드 묶음을 모두 삽입\n",
+    "heap = []\n",
+    "for _ in range(n):\n",
+    "    heapq.heappush(heap, int(input()))\n",
+    "    \n",
+    "result = 0\n",
+    "\n",
+    "# 힙에 원소가 1개 남을 때까지\n",
+    "while len(heap) != 1: # while len(heap) > 1:\n",
+    "    # 가장 작은 2개의 카드 묶음 꺼내서 비교하여 합치기\n",
+    "    comparison = heapq.heappop(heap) + heapq.heappop(heap)\n",
+    "    result += comparison\n",
+    "    # 합친 카드 묶음을 다시 삽입\n",
+    "    heapq.heappush(heap, comparison)\n",
+    "\n",
+    "print(result)    "
+   ]
   }
  ],
  "metadata": {
