--- a/ch7_binary_search.ipynb
+++ b/ch7_binary_search.ipynb
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 떡볶이 떡 만들기"
+    "### 떡볶이 떡 만들기 // RE(반례?)"
    ]
   },
   {
@@ -189,7 +189,136 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 잘린 떡의 합이 M만큼이 되어야 한다. H는 M의 max값보단 작아야 하겠다.\n",
+    "* (기억의 저편) 자르는 높이 H를 이진 탐색해야 했던 것 같다.\n",
+    "* H를 이진 탐색하되, 비교 값은 잘린 떡의 길이로 해야 한다."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* O(N + Nlog10억)\n",
+    "* log10억이 대략 30 정도, N은 최대 1,000,000이므로 약 3,000만번의 연산 필요. 2초 내에 어찌저찌 가능하겠다.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 나는 별 생각없이 반복문으로 구현하긴 했는데, 해설에서 이 문제는 얻을 수 있는 떡볶이 양에 따라 자를 위치를 결정해야 하므로 재귀적으로 구현하는 게 귀찮은 작업이 될 수 있다고 한다. 일반적으로 이런 파라메트릭 서치 유형은 재귀보다는 반복문으로 이진 탐색을 구현하는 게 더 간결한 해결법이라고 한다.\n",
+    "* 내 풀이에 반례가 있을 것 같다. '적어도 M만큼의 떡을 얻기 위해 절단기에 설정할 수 있는 높이의 최댓값'을 구하는 것이므로 M을 만족하면서 최대한 덜 잘랐을 때가 정답이므로. (가령, 어떻게 잘라도 M과 똑같을 수 없다면 내 코드는 답을 찾지 못할 것 같다)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 떡의 개수 N, 요청한 떡의 길이 M 입력\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "# 떡의 개별 높이 리스트 입력\n",
+    "rc_heights = list(map(int, input().split()))\n",
+    "\n",
+    "# 시작값을 0, 끝값을 떡의 최고 높이로 설정\n",
+    "start = 0\n",
+    "end = max(rc_heights)\n",
+    "\n",
+    "# 이진 탐색 반복문 구현\n",
+    "while start <= end:\n",
+    "    mid = (start + end) // 2 # 자르는 높이 기준 설정\n",
+    "    \n",
+    "    # mid의 높이로 잘랐을 때 나오는 떡의 총 길이\n",
+    "    cut_rc = sum([i - mid if i >= mid else 0 for i in rc_heights])\n",
+    "    \n",
+    "    # 잘라 나온 길이가 조건 M과 같다면 멈추고\n",
+    "    if cut_rc == M:\n",
+    "        break\n",
+    "    # 조건보다 크다면 잘라서 나온 총 길이를 줄이기 위해 자르는 높이를 크게 하고\n",
+    "    elif cut_rc > M:\n",
+    "        start = mid + 1\n",
+    "    # 조건보다 작다면 잘라서 나온 총 길이를 늘리기 위해 자르는 높이를 작게 한다\n",
+    "    else:\n",
+    "        end = mid - 1\n",
+    "\n",
+    "print(mid)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 떡의 개수(N)과 요청한 떡의 길이(M)를 입력\n",
+    "n, m = list(map(int, input().split()))\n",
+    "# 각 떡의 개별 높이 정보를 입력받기\n",
+    "array = list(map(int, input().split()))\n",
+    "\n",
+    "# 이진 탐색을 위한 시작점과 끝점 설정\n",
+    "start = 0\n",
+    "end = max(array)\n",
+    "\n",
+    "# 이진 탐색 수행(반복적)\n",
+    "result = 0\n",
+    "while start <= end:\n",
+    "    total = 0\n",
+    "    mid = (start + end) // 2\n",
+    "    for x in array:\n",
+    "        # 잘랐을 때의 떡의 양 계산\n",
+    "        if x > mid:\n",
+    "            total += x - mid\n",
+    "        # 떡의 양이 부족한 경우 더 많이 자르기(왼쪽 부분 탐색)\n",
+    "        if total < m:\n",
+    "            end = mid - 1\n",
+    "        # 떡의 양이 충분한 경우 덜 자르기(오른쪽 부분 탐색)\n",
+    "        else:\n",
+    "            result = mid # 최대한 덜 잘랐을 때가 정답이므로, 여기에서 result에 기록\n",
+    "            start = mid + 1\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q27. 정렬된 배열에서 특정 수의 개수 구하기"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 30분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 그냥 bisect 써서 풀기\n",
+    "* 직접 구현하려면 조금 까다로울지도?\n",
+    "    * 일단 반복문으로는 같을 때 min, max값 갱신하고 기준 앞 뒤로 다시 다 봐야하는데 그걸 어떻게 해야할지 모르겠어서 재귀함수로 선회\n",
+    "    * 재귀함수 쓸 때는 어쨌든 해당 원소의 인덱스를 갱신하기 때문에 bisect 모듈 쓸 때와는 다르게 개수를 신경써서 써줘야함(min과 max의 차이값에 1을 더한 게 실제 개수이며, 해당 원소가 없어서 min, max값이 갱신이 안 된다면 음수가 나오므로 음수일 때 -1을 출력하게 하는 등)"
    ]
   },
   {
@@ -209,7 +338,81 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import bisect\n",
+    "\n",
+    "# 수열의 원소 개수 N, 찾아야 할 숫자 x 입력\n",
+    "N, x = map(int, input().split())\n",
+    "\n",
+    "# 수열 정보 입력\n",
+    "array = list(map(int, input().split()))\n",
+    "\n",
+    "# bisect 모듈 사용하여 x가 들어갈 가장 오른쪽 인덱스와 가장 왼쪽 인덱스의 차이를 계산(x의 개수를 계산)\n",
+    "answer = bisect.bisect_right(array, x) - bisect.bisect_left(array, x)\n",
+    "\n",
+    "# 결과가 0이라면(x가 없다면) -1을 출력, 아니라면 결과값(x의 개수)을 출력\n",
+    "print(answer if answer != 0 else -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 수열의 원소 개수 N, 찾아야 할 숫자 x 입력\n",
+    "N, x = map(int, input().split())\n",
+    "\n",
+    "# 수열 정보 입력\n",
+    "array = list(map(int, input().split()))\n",
+    "\n",
+    "min_idx = N\n",
+    "max_idx = -1\n",
+    "\n",
+    "# while start < end:\n",
+    "#     print(start, mid, end)\n",
+    "#     mid = (start + end) // 2\n",
+    "    \n",
+    "#     if x == array[mid]:\n",
+    "#         min_idx = min(min_idx, mid)\n",
+    "#         max_idx = max(max_idx, mid)\n",
+    "#     elif x > array[mid]:\n",
+    "#         start = mid + 1\n",
+    "#     else:\n",
+    "#         end = mid - 1\n",
+    "        \n",
+    "def binary_search(array, target, start, end):\n",
+    "    global min_idx, max_idx\n",
+    "    \n",
+    "    if start > end:\n",
+    "        return\n",
+    "    \n",
+    "    mid = (start + end) // 2\n",
+    "    \n",
+    "    if x == array[mid]:\n",
+    "        min_idx = min(min_idx, mid)\n",
+    "        max_idx = max(max_idx, mid)\n",
+    "        binary_search(array, target, mid+1, end)\n",
+    "        binary_search(array, target, start, mid-1)\n",
+    "    elif x > array[mid]:\n",
+    "        binary_search(array, target, mid+1, end)\n",
+    "    else:\n",
+    "        binary_search(array, target, start, mid-1)\n",
+    "    \n",
+    "binary_search(array, x, 0, N-1)\n",
+    "\n",
+    "answer = max_idx - min_idx\n",
+    "\n",
+    "print(answer + 1 if answer >= 0 else -1)"
+   ]
   }
  ],
  "metadata": {
