add explanations for Q27

--- a/ch7_binary_search.ipynb
+++ b/ch7_binary_search.ipynb
@@ -205,7 +205,7 @@
     "\n",
     "#### 해설 본 후\n",
     "* 나는 별 생각없이 반복문으로 구현하긴 했는데, 해설에서 이 문제는 얻을 수 있는 떡볶이 양에 따라 자를 위치를 결정해야 하므로 재귀적으로 구현하는 게 귀찮은 작업이 될 수 있다고 한다. 일반적으로 이런 파라메트릭 서치 유형은 재귀보다는 반복문으로 이진 탐색을 구현하는 게 더 간결한 해결법이라고 한다.\n",
-    "* 내 풀이에 반례가 있을 것 같다. '적어도 M만큼의 떡을 얻기 위해 절단기에 설정할 수 있는 높이의 최댓값'을 구하는 것이므로 M을 만족하면서 최대한 덜 잘랐을 때가 정답이므로. (가령, 어떻게 잘라도 M과 똑같을 수 없다면 내 코드는 답을 찾지 못할 것 같다)"
+    "* 내 풀이에 반례가 있을 것 같다. '적어도 M만큼의 떡을 얻기 위해 절단기에 설정할 수 있는 높이의 최댓값'을 구하는 것이므로 M을 만족하면서 최대한 덜 잘랐을 때가 정답이므로. (가령, 어떻게 잘라도 M과 똑같을 수 없다면 내 코드는 답을 찾지 못할 것 같다) => 근데 저번 코드 보니까 저번에도 이렇게 풀었다;;"
    ]
   },
   {
@@ -315,6 +315,7 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
+    "* 문제에서 O(logN)으로 설계하라고 애초에 조건이 주어짐\n",
     "* 그냥 bisect 써서 풀기\n",
     "* 직접 구현하려면 조금 까다로울지도?\n",
     "    * 일단 반복문으로는 같을 때 min, max값 갱신하고 기준 앞 뒤로 다시 다 봐야하는데 그걸 어떻게 해야할지 모르겠어서 재귀함수로 선회\n",
@@ -327,10 +328,11 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* bisect 쓰면 O(logN)이니 통과.\n",
+    "* 직접 짠 코드도 이진 탐색 코드(탐색 범위를 절반씩 줄여나가니까)이므로 O(logN)일 것이다. 통과될듯\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* bisect를 쓰지 않는 해설 코드에서는 해당 값을 가지는 원소 중 처음 위치를 찾는 함수와 마지막 위치를 찾는 함수 두 개를 만들어서 해결함."
    ]
   },
   {
@@ -374,6 +376,7 @@
     "# 수열 정보 입력\n",
     "array = list(map(int, input().split()))\n",
     "\n",
+    "# 찾고자 하는 값의 최소 인덱스, 최대 인덱스 값 초기화\n",
     "min_idx = N\n",
     "max_idx = -1\n",
     "\n",
@@ -389,29 +392,115 @@
     "#     else:\n",
     "#         end = mid - 1\n",
     "        \n",
+    "# 이진 탐색 함수 선언\n",
     "def binary_search(array, target, start, end):\n",
+    "    # 최소 인덱스와 최대 인덱스 갱신을 위해 전역 변수임을 알려줌\n",
     "    global min_idx, max_idx\n",
     "    \n",
+    "    # 시작값이 끝값을 초과하면 함수 중지\n",
     "    if start > end:\n",
     "        return\n",
     "    \n",
+    "    # 기준이 되는 중간값 계산\n",
     "    mid = (start + end) // 2\n",
     "    \n",
+    "    # 찾고자 하는 값이 mid 값과 같다면\n",
     "    if x == array[mid]:\n",
+    "        # 최소 인덱스, 최대 인덱스 갱신\n",
     "        min_idx = min(min_idx, mid)\n",
     "        max_idx = max(max_idx, mid)\n",
+    "        # 같은 값이 더 있을 수 있으므로 앞, 뒤 부분 각각 재귀로 탐색\n",
     "        binary_search(array, target, mid+1, end)\n",
     "        binary_search(array, target, start, mid-1)\n",
+    "    # 찾고자 하는 값이 mid값보다 크다면 뒷부분 탐색\n",
     "    elif x > array[mid]:\n",
     "        binary_search(array, target, mid+1, end)\n",
+    "    # 찾고자 하는 값이 mid값보다 작다면 앞부분 탐색\n",
     "    else:\n",
     "        binary_search(array, target, start, mid-1)\n",
-    "    \n",
+    "\n",
+    "# 이진 탐색 함수 실행\n",
     "binary_search(array, x, 0, N-1)\n",
     "\n",
-    "answer = max_idx - min_idx\n",
-    "\n",
+    "# 정답 구하기(음수이면 해당 값이 array 안에 없다는 뜻이므로 -1 출력, 아니라면 최소, 최대 인덱스 간의 차이를 통해 개수 구하여 출력)\n",
+    "answer = max_idx - min_idx \n",
     "print(answer + 1 if answer >= 0 else -1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 정렬된 수열에서 값이 x인 원소의 개수를 세는 메서드\n",
+    "def count_by_value(array, x):\n",
+    "    # 데이터의 개수\n",
+    "    n = len(array)\n",
+    "    \n",
+    "    # x가 처음 등장한 인덱스 계산\n",
+    "    a = first(array, x, 0, n-1)\n",
+    "    \n",
+    "    # 수열에 x가 존재하지 않는 경우\n",
+    "    if a == None:\n",
+    "        return 0 # 값이 x인 원소의 개수는 0개이므로 0 반환\n",
+    "    \n",
+    "    # x가 마지막으로 등장한 인덱스 계산\n",
+    "    b = last(array, x, 0, n-1)\n",
+    "    \n",
+    "    # 개수를 반환\n",
+    "    return b - a + 1\n",
+    "\n",
+    "# 처음 위치를 찾는 이진 탐색 메서드\n",
+    "def first(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    mid = (start + end) // 2\n",
+    "    # 해당 값을 가지는 원소 중에서 가장 왼쪽에 있는 경우에만 인덱스 반환\n",
+    "    if (mid == 0 or target > array[mid-1]) and array[mid] == target: ## mid == 0 이 True면 어차피 or로 이어진 다음 조건은 안 보니까 이렇게 짤 수 있는 것.\n",
+    "        return mid\n",
+    "    # 중간점의 값보다 찾고자 하는 값이 작거나 같은 경우 왼쪽 확인\n",
+    "    elif array[mid] >= target: ## 아 위에서 array[mid] == target이지만 다른 조건에서 안 걸렸을 수 있고, 가장 왼쪽의 값을 찾아야하니까 여기에 등호를 추가해주는 거구나.\n",
+    "        return first(array, target, start, mid-1)\n",
+    "    # 중간점의 값보다 찾고자 하는 값이 큰 경우 오른쪽 확인\n",
+    "    else:\n",
+    "        return first(array, target, mid+1, end)\n",
+    "    \n",
+    "# 마지막 위치를 찾는 이진 탐색 메서드\n",
+    "def last(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    mid = (start + end) // 2\n",
+    "    # 해당 값을 가지는 원소 중에서 가장 오른쪽에 있는 경우에만 인덱스 반환\n",
+    "    if (mid == n-1 or target < array[mid+1]) and array[mid] == target: ## mid == n-1 이 True면 어차피 or로 이어진 다음 조건은 안 보니까 이렇게 짤 수 있는 것.\n",
+    "        return mid\n",
+    "    # 중간점의 값보다 찾고자 하는 값이 작은 경우 왼쪽 확인\n",
+    "    elif array[mid] > target: ## 위에서 array[mid] == target이지만 다른 조건에서 안 걸렸을 수 있고, 가장 오른쪽의 값을 찾아야하니까 여기선 등호 안 걸리게 하고 else에서 등호 걸리도록 함.\n",
+    "        return last(array, target, start, mid-1)\n",
+    "    # 중간점의 값보다 찾고자 하는 값이 크거나 같은 경우 오른쪽 확인\n",
+    "    else:\n",
+    "        return last(array, target, mid+1, end)\n",
+    "    \n",
+    "n, x = map(int, input().split()) # 데이터의 개수 N, 찾고자 하는 값 x 입력\n",
+    "array = list(map(int, input().split())) # 전체 데이터 입력\n",
+    "\n",
+    "# 값이 x인 데이터의 개수 계산\n",
+    "count = count_by_value(array, x)\n",
+    "\n",
+    "# 값이 x인 원소가 존재하지 않는다면\n",
+    "if count == 0:\n",
+    "    print(-1)\n",
+    "# 값이 x인 원소가 존재한다면\n",
+    "else:\n",
+    "    print(count)"
    ]
   }
  ],
