resolve Q28 & resolve Q29(ing)

--- a/ch7_binary_search.ipynb
+++ b/ch7_binary_search.ipynb
@@ -502,6 +502,247 @@
     "else:\n",
     "    print(count)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q28. 고정점 찾기"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 20분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 수열의 원소는 모두 다른 값이며 오름차순으로 정렬되어 있다 => 이진 탐색 이용해서 mid 인덱스 값이 수열의 해당 위치 값과 같은지 확인\n",
+    "* 인덱스는 0부터 시작하여 항상 1씩 늘어나고, N-1이 최대값이다.\n",
+    "    * 값이 인덱스보다 크다면, 그 이전을 살펴봐야 함 => 값은 오름차순 정렬이므로 항상 다음 값이 해당 값보다 1이상 클 수밖에 없고, 인덱스는 1씩밖에 못 올라간다. 그러므로 값이 인덱스보다 더 큰 시점에서 그 이후를 살피면 항상 값이 인덱스보다 클 수밖에 없다.\n",
+    "    * 값이 인덱스보다 작다면, 그 이후를 살펴봐야 함 => 값은 오름차순 정렬이므로 항상 이전 값이 해당 값보다 1이상 작을 수밖에 없고, 인덱스는 이전으로 갈수록 1씩만 내려간다. 그러므로 값이 인덱스보다 작은 시점에서 그 이전을 살피면 항상 값이 인덱스보다 작을 수밖에 없다."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* 이진 탐색 구현하여 O(logN) 달성\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 잘 풀었다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 수열 원소 개수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 수열 정보 입력\n",
+    "array = list(map(int, input().split()))\n",
+    "\n",
+    "# 고정점을 찾기 위한 이진 탐색 재귀 함수 선언\n",
+    "def find_fixed_point(array, start, end):\n",
+    "    \n",
+    "    # 시작점이 끝점을 넘어가면 고정점을 찾지 못했다는 것이므로 -1 리턴\n",
+    "    if start > end:\n",
+    "        return -1\n",
+    "    \n",
+    "    mid = (start + end) // 2\n",
+    "    \n",
+    "    # 인덱스와 값이 같으면 리턴\n",
+    "    if mid == array[mid]:\n",
+    "        return mid\n",
+    "    # 값이 인덱스보다 작으면 뒷부분 탐색\n",
+    "    elif array[mid] < mid:\n",
+    "        return find_fixed_point(array, mid+1, end)\n",
+    "    # 값이 인덱스보다 크면 앞부분 탐색\n",
+    "    else:\n",
+    "        return find_fixed_point(array, start, mid-1)\n",
+    "\n",
+    "# 함수 결과를 프린트\n",
+    "print(find_fixed_point(array, 0, N-1))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q29. 공유기 설치 // RE(풀이 시간 초과)\n",
+    "https://www.acmicpc.net/problem/2110"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 50분\n",
+    "* 시간 제한 2초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 일단 첫 위치에 설치하고, 집 좌표의 최댓값과 최솟값의 차이(범위)를 공유기 개수로 나눈만큼 공유기 설치?\n",
+    "* 0부터 최댓값과 최솟값의 차이(범위)까지를 공유기 거리라고 하고 이걸 이진탐색해서 이대로 넣었을 때 되는지 안 되는 지를 체크?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* \n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 집 개수 N, 공유기 개수 C 입력\n",
+    "N, C = map(int, input().split())\n",
+    "\n",
+    "# 집들의 좌표 정보 입력\n",
+    "houses = []\n",
+    "for _ in range(N):\n",
+    "    houses.append(int(input()))\n",
+    "\n",
+    "houses.sort()\n",
+    "\n",
+    "diff = []\n",
+    "for i in range(1, N):\n",
+    "    diff.append(houses[i] - houses[i-1])\n",
+    "\n",
+    "def can_install_router(array, value, N, C):\n",
+    "    last_pos = 0\n",
+    "    C -= 1\n",
+    "    for i in range(1, N):\n",
+    "        if C == 0:\n",
+    "            return True\n",
+    "        \n",
+    "        if array[last_pos] + value <= array[i]:\n",
+    "            C -= 1\n",
+    "            last_pos = i\n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def binary_search(array, start, end, N, C):\n",
+    "    global answer\n",
+    "    \n",
+    "    if start > end:\n",
+    "        return\n",
+    "    \n",
+    "    mid = (start + end) // 2\n",
+    "    \n",
+    "    if can_install_router(array, mid, N, C):\n",
+    "        answer = max(answer, mid)\n",
+    "        binary_search(array, mid+1, end, N, C)\n",
+    "    else:\n",
+    "        binary_search(array, start, mid-1, N, C)\n",
+    "    \n",
+    "\n",
+    "answer = 0    \n",
+    "binary_search(houses, min(diff), houses[-1] - houses[0], N, C) ## start값을 1로 하면... 실제로 1보다 거리가 먼데 1로 답이 나오는 경우가 있을 수 있겠죠...\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "can_install_router(houses, 3, N, C)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q30. 가사 검색\n",
+    "https://school.programmers.co.kr/learn/courses/30/lessons/60060"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 1시간 30분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* \n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
