--- a/ch7_binary_search.ipynb
+++ b/ch7_binary_search.ipynb
@@ -613,10 +613,25 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* O(NlogN + N * log좌표최댓값)\n",
+    "* N은 최대 200,000이고, 좌표 최댓값은 10억\n",
+    "* 집 좌표를 정렬하는데 O(NlogN)\n",
+    "* log10억은 대략 30이고, 이진 탐색을 진행하면서 모든 집의 좌표를 한 번씩 돌아보게 되므로(공유기 설치 가능 여부 확인을 위해) N을 곱해줘야 함\n",
+    "* 결국 빅오표기법상 O(NlogN)이 될 듯? N이 최대 200,000이니까 2초면 아슬아슬하게 가능할 것이다.\n",
+    "\n",
+    "* 근데 나는 쓸 데 없이 diff를 넣어 버려서 O(N)만큼 시간 더 걸림\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 어차피 최댓값 찾는거라 굳이 diff라는 리스트를 만들어 줄 필요 없이, 시작값은 1로 넣으면 된다. => diff 안 만들면 sys 안 쓰고 대개 input()으로도 시간 내 통과가 되는 것 같다.\n",
+    "* 처음 짠 코드에 반례가 있었다. 마지막 지점에서 공유기 설치가 딱 알맞게 된 경우를 체크하지 못하게 코드를 짰다. 그래도 발견한 스스로를 칭찬해주자(...)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 처음 코드"
    ]
   },
   {
@@ -643,6 +658,7 @@
     "\n",
     "houses.sort()\n",
     "\n",
+    "## 요건 필요가 없다. 어차피 최댓값을 구하게 되므로 시작값을 그냥 1로 넣어줘도 된다.\n",
     "diff = []\n",
     "for i in range(1, N):\n",
     "    diff.append(houses[i] - houses[i-1])\n",
@@ -651,15 +667,18 @@
     "    last_pos = 0\n",
     "    C -= 1\n",
     "    for i in range(1, N):\n",
-    "        if C == 0:\n",
+    "        \n",
+    "        ## 이 부분 때문에 틀렸다는 건데... \n",
+    "        ## 어차피 C가 0일 때 빠져나와도 똑같은 거 아닌가...? => 아니었다...\n",
+    "        if C == 0: \n",
     "            return True\n",
     "        \n",
     "        if array[last_pos] + value <= array[i]:\n",
     "            C -= 1\n",
     "            last_pos = i\n",
     "    \n",
-    "    return False\n",
-    "\n",
+    "    return False ## 위 조건문 그대로 두고, 이 리턴 부분을 C == 0이면 True, 아니면 False로 하면 또 맞다.\n",
+    "    ## 아. 마지막 지점을 돌면서 C가 0이 된 경우가 있을 수 있는데 그냥 return False 하면 이 케이스를 못 찾겠구나...\n",
     "\n",
     "def binary_search(array, start, end, N, C):\n",
     "    global answer\n",
@@ -677,29 +696,197 @@
     "    \n",
     "\n",
     "answer = 0    \n",
-    "binary_search(houses, min(diff), houses[-1] - houses[0], N, C) ## start값을 1로 하면... 실제로 1보다 거리가 먼데 1로 답이 나오는 경우가 있을 수 있겠죠...\n",
+    "binary_search(houses, min(diff), houses[-1] - houses[0], N, C)\n",
     "\n",
     "print(answer)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 반복문 이용"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "can_install_router(houses, 3, N, C)"
+    "import sys\n",
+    "\n",
+    "# 집 개수 N, 공유기 개수 C 입력\n",
+    "N, C = map(int, input().split())\n",
+    "\n",
+    "# 집들의 좌표 정보 입력\n",
+    "houses = []\n",
+    "for _ in range(N):\n",
+    "    houses.append(int(sys.stdin.readline().rstrip()))\n",
+    "    \n",
+    "houses.sort()\n",
+    "\n",
+    "start = 1\n",
+    "end = houses[-1] - houses[0]\n",
+    "\n",
+    "answer = 0\n",
+    "while start <= end:\n",
+    "    temp_c = C\n",
+    "    mid = (start + end) // 2\n",
+    "    \n",
+    "    router = 0\n",
+    "    temp_c -= 1\n",
+    "    for i in range(1, N):\n",
+    "        if houses[router] + mid <= houses[i]:\n",
+    "            temp_c -= 1\n",
+    "            router = i\n",
+    "    \n",
+    "    if temp_c <= 0:\n",
+    "        answer = max(mid, answer)\n",
+    "        start = mid+1\n",
+    "    else:\n",
+    "        end = mid-1\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 재귀 이용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### can_install_router() 안 쓴 버전\n",
+    "## sys 안 써도 통과됨\n",
+    "\n",
+    "# 집 개수 N, 공유기 개수 C 입력\n",
+    "N, C = map(int, input().split())\n",
+    "\n",
+    "# 집들의 좌표 정보 입력\n",
+    "houses = []\n",
+    "for _ in range(N):\n",
+    "    houses.append(int(input()))\n",
+    "\n",
+    "houses.sort()\n",
+    "\n",
+    "answer = 0\n",
+    "def install_router(houses, start, end, C):\n",
+    "    global answer\n",
+    "    \n",
+    "    if start > end:\n",
+    "        return\n",
+    "    \n",
+    "    temp_c = C\n",
+    "    mid = (start + end) // 2\n",
+    "    \n",
+    "    router = 0\n",
+    "    temp_c -= 1\n",
+    "    for i in range(1, N):\n",
+    "        if houses[router] + mid <= houses[i]:\n",
+    "            temp_c -= 1\n",
+    "            router = i\n",
+    "    \n",
+    "    if temp_c <= 0:\n",
+    "        answer = max(mid, answer)\n",
+    "        install_router(houses, mid+1, end, C)\n",
+    "    else:\n",
+    "        install_router(houses, start, mid-1, C)\n",
+    "\n",
+    "install_router(houses, 1, houses[-1] - houses[0], C)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### can_install_router() 쓴 버전\n",
+    "## sys 안 써도 통과됨\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "# 집 개수 N, 공유기 개수 C 입력\n",
+    "N, C = map(int, input().split())\n",
+    "\n",
+    "# 집들의 좌표 정보 입력\n",
+    "houses = []\n",
+    "for _ in range(N):\n",
+    "    houses.append(int(sys.stdin.readline().rstrip()))\n",
+    "\n",
+    "houses.sort() # 앞에서부터 공유기 설치를 하기 위해 집을 좌표 오름차순으로 정렬\n",
+    "\n",
+    "# 특정 값을 가장 근접한 두 공유기 사이의 거리로 설정했을 때 \n",
+    "# 이를 만족하며 모든 공유기 설치가 가능한지 확인하는 함수 선언\n",
+    "def can_install_router(array, value, N, C):\n",
+    "    last_pos = 0 # 마지막으로 공유기를 설치한 위치. 초기값은 첫 번째 집에 설치할 것이므로 인덱스인 0으로 설정\n",
+    "    C -= 1 # 공유기를 첫 번째 집에 설치했으므로 설치해야 할 공유기 수에서 1 뺌\n",
+    "    \n",
+    "    # 오름차순 정렬된 집 좌표를 돌면서\n",
+    "    for i in range(1, N):\n",
+    "        # 마지막으로 공유기가 설치된 집의 좌표와 현재 확인한 집의 좌표의 차이가 특정 값과 비교해 같거나 크다면\n",
+    "        if array[last_pos] + value <= array[i]:\n",
+    "            # 조건을 만족하여 공유기 설치가 가능하므로 공유기를 설치하고 변수들을 갱신\n",
+    "            C -= 1\n",
+    "            last_pos = i\n",
+    "\n",
+    "    # 모두 살펴본 뒤 설치해야할 공유기 이상의 공유기를 설치할 수 있었다면 True, 아니라면 False 리턴        \n",
+    "    if C <= 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# 가장 근접한 두 공유기 사이의 거리를 찾기 위한 이진 탐색 함수 선언\n",
+    "def binary_search(array, start, end, N, C):\n",
+    "    global answer\n",
+    "    \n",
+    "    if start > end:\n",
+    "        return\n",
+    "    \n",
+    "    mid = (start + end) // 2\n",
+    "    \n",
+    "    # mid 값으로 조건에 맞게 공유기 설치가 가능했다면 정답 변수를 갱신하고, 더 큰 값으로도 가능한지 살피기 위해 뒤쪽을 탐색\n",
+    "    if can_install_router(array, mid, N, C):\n",
+    "        answer = max(answer, mid)\n",
+    "        binary_search(array, mid+1, end, N, C)\n",
+    "    # 공유기 설치가 불가능했다면 더 작은 값으로 확인하기 위해 앞쪽을 탐색\n",
+    "    else:\n",
+    "        binary_search(array, start, mid-1, N, C)\n",
+    "    \n",
+    "# 정답 변수 선언\n",
+    "answer = 0\n",
+    "\n",
+    "# 함수 실행\n",
+    "binary_search(houses, 1, houses[-1] - houses[0], N, C)\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(answer)"
    ]
   },
   {
