--- a/ch7_binary_search.ipynb
+++ b/ch7_binary_search.ipynb
@@ -909,7 +909,9 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 와일드카드는 앞에서부터, 혹은 뒤에서부터 시작하므로 단어의 정방향, 역방향을 모두 고려하는 게 편하다\n",
+    "* 문자열끼리 대소 비교하면 사전 순서 기준으로 뒤에 나오는 것을 더 크다고 결과를 냄\n",
+    "* (기억의 저편) 사실 이전에 해설을 봤던 게 얼추 기억이 나서 푸는 방식이 기억이 난다."
    ]
   },
   {
@@ -918,10 +920,14 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* words의 길이는 최대 100,000이고, 가장 긴 가사 단어의 길이는 최대 10,000이며, queries의 길이도 100,000이다.\n",
+    "* 마지막 코드 기준 O(words의 길이 + 가장 긴 가사 단어의 길이(각 길이별 단어의 개수 * log_{각 길이별 단어의 개수}) + (queries의 길이 * (가장 긴 가사 단어의 길이 + log_{가장 긴 가사 단어의 길이})))인 것 같..은데\n",
+    "* 최악의 경우 1초 안에 불가능할 것 같지만 아마 전체 가사 단어 길이의 합이 1,000,000라는 제약이 있어 가능한 것 같다..\n",
+    "* 솔직히 이 문제는 시간 복잡도 계산이 너무 어려운 것 같다...\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 로직 자체는 같다고 보인다.\n",
+    "* 답지에서처럼 count_by_range()라는 함수를 만들었으면 코드가 더 깔끔했을 것 같다. 성능도 더 좋으려나?"
    ]
   },
   {
@@ -929,7 +935,225 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 효율성 1, 3 시간초과\n",
+    "## 길이 별로 안 만들어서 정방향 역방향 각각 계속 전체 리스트를 돌게 되어 시간이 오래 걸린다.\n",
+    "\n",
+    "import bisect\n",
+    "\n",
+    "def solution(words, queries):\n",
+    "    reversed_words = [i[::-1] for i in words]\n",
+    "    \n",
+    "    words.sort()\n",
+    "    reversed_words.sort()\n",
+    "    \n",
+    "    answer = []\n",
+    "    for query in queries:\n",
+    "        if query[0] != '?': # 알파벳 소문자로 시작하면\n",
+    "            start = query.replace('?', 'a')\n",
+    "            end = query.replace('?', 'z')\n",
+    "            \n",
+    "            cand = words[bisect.bisect_left(words, start):bisect.bisect_right(words, end)]\n",
+    "            answer.append(len([i for i in cand if len(i) == len(query)]))\n",
+    "        else:\n",
+    "            query = query[::-1]\n",
+    "            start = query.replace('?', 'a')\n",
+    "            end = query.replace('?', 'z')\n",
+    "\n",
+    "            cand = reversed_words[bisect.bisect_left(reversed_words, start):bisect.bisect_right(reversed_words, end)]\n",
+    "            answer.append(len([i for i in cand if len(i) == len(query)]))\n",
+    "            \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 효율성 3 시간 초과\n",
+    "## 길이별로 딕셔너리 만들어서 해보기. 역시 시간 초과\n",
+    "\n",
+    "import bisect\n",
+    "\n",
+    "def solution(words, queries):\n",
+    "    reversed_words = [i[::-1] for i in words]\n",
+    "    \n",
+    "    words.sort()\n",
+    "    reversed_words.sort()\n",
+    "    \n",
+    "    words_dict = {}\n",
+    "    reversed_words_dict = {}\n",
+    "    \n",
+    "    for i in words:\n",
+    "        words_dict[len(i)] = words_dict.get(len(i), []) + [i]\n",
+    "        \n",
+    "    for i in reversed_words:\n",
+    "        reversed_words_dict[len(i)] = reversed_words_dict.get(len(i), []) + [i]\n",
+    "        \n",
+    "    # # 전체 리스트에서 정렬하지 않고 여기서 정렬하면? 그래도 3 시간 초과\n",
+    "    # for i in words_dict:\n",
+    "    #     words_dict[i].sort()\n",
+    "        \n",
+    "    # for i in reversed_words_dict:\n",
+    "    #     reversed_words_dict[i].sort()\n",
+    "        \n",
+    "    answer = []\n",
+    "    for query in queries:\n",
+    "        if query[0] != '?': # 알파벳 소문자로 시작하면\n",
+    "            if len(query) in words_dict:\n",
+    "                start = query.replace('?', 'a')\n",
+    "                end = query.replace('?', 'z')\n",
+    "                \n",
+    "                answer.append(len(words_dict[len(query)][bisect.bisect_left(words_dict[len(query)], start) : bisect.bisect_right(words_dict[len(query)], end)]))\n",
+    "            else:\n",
+    "                answer.append(0)\n",
+    "        else:\n",
+    "            if len(query) in reversed_words_dict:\n",
+    "                query = query[::-1]\n",
+    "                start = query.replace('?', 'a')\n",
+    "                end = query.replace('?', 'z')\n",
+    "\n",
+    "                answer.append(len(reversed_words_dict[len(query)][bisect.bisect_left(reversed_words_dict[len(query)], start) : bisect.bisect_right(reversed_words_dict[len(query)], end)]))\n",
+    "            else:\n",
+    "                answer.append(0)\n",
+    "                \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 효율성 3 시간 초과\n",
+    "## 딕셔너리 유지하되, 불필요한 정렬이나 반복을 최대한 줄여보기\n",
+    "\n",
+    "import bisect\n",
+    "\n",
+    "def solution(words, queries):\n",
+    "    words_dict = {}\n",
+    "    reversed_words_dict = {}\n",
+    "    \n",
+    "    for i in words:\n",
+    "        words_dict[len(i)] = words_dict.get(len(i), []) + [i]\n",
+    "        reversed_words_dict[len(i)] = reversed_words_dict.get(len(i), []) + [i[::-1]]\n",
+    "        \n",
+    "    for i in words_dict:\n",
+    "        words_dict[i].sort()\n",
+    "        reversed_words_dict[i].sort()\n",
+    "        \n",
+    "    answer = []\n",
+    "    for query in queries:\n",
+    "        if query[0] != '?': # 알파벳 소문자로 시작하면\n",
+    "            if len(query) in words_dict:\n",
+    "                start = query.replace('?', 'a')\n",
+    "                end = query.replace('?', 'z')\n",
+    "                \n",
+    "                answer.append(len(words_dict[len(query)][bisect.bisect_left(words_dict[len(query)], start) : bisect.bisect_right(words_dict[len(query)], end)]))\n",
+    "            else:\n",
+    "                answer.append(0)\n",
+    "        else:\n",
+    "            if len(query) in reversed_words_dict:\n",
+    "                query = query[::-1]\n",
+    "                start = query.replace('?', 'a')\n",
+    "                end = query.replace('?', 'z')\n",
+    "\n",
+    "                answer.append(len(reversed_words_dict[len(query)][bisect.bisect_left(reversed_words_dict[len(query)], start) : bisect.bisect_right(reversed_words_dict[len(query)], end)]))\n",
+    "            else:\n",
+    "                answer.append(0)\n",
+    "                \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 통과\n",
+    "## 딕셔너리보단 계수 정렬이 답이었나...\n",
+    "\n",
+    "import bisect\n",
+    "\n",
+    "def solution(words, queries):\n",
+    "    # 계수 정렬을 위한 이중 리스트 선언 => 단어의 정방향 순서와 역방향 순서를 각각 만들고, 내부 리스트는 문자열의 길이에 따라 분류할 것\n",
+    "    words_dict = [[] for _ in range(10001)] ## [[]] * 10001 이렇게 하면 모든 내부 리스트가 다 같은 주소를 가지게 되어 똑같아져버려 답이 안 나옴\n",
+    "    reversed_words_dict = [[] for _ in range(10001)]\n",
+    "    \n",
+    "    # 가사 단어를 모두 돌면서 단어 길이에 따라 각각 정방향 순서에는 그대로, 역방향 순서에는 뒤집어서 추가\n",
+    "    for i in words:\n",
+    "        words_dict[len(i)].append(i)\n",
+    "        reversed_words_dict[len(i)].append(i[::-1])\n",
+    "    \n",
+    "    # 내부 리스트의 원소들을 오름차순(사전순)으로 정렬\n",
+    "    for i in range(1, 10001):\n",
+    "        words_dict[i].sort()\n",
+    "        reversed_words_dict[i].sort()\n",
+    "    \n",
+    "    # 정답 리스트 선언\n",
+    "    answer = []\n",
+    "    \n",
+    "    # 검색 키워드를 모두 돌면서\n",
+    "    for query in queries:\n",
+    "        if query[0] != '?': # 키워드가 알파벳 소문자로 시작하면\n",
+    "            # 사전순으로 정렬된 리스트에서 이진탐색을 진행할 것이므로, 와일드카드를 모두 a로 채운 start와, z로 채운 end라는 변수 선언\n",
+    "            start = query.replace('?', 'a')\n",
+    "            end = query.replace('?', 'z')\n",
+    "            \n",
+    "            # bisect를 이용하여 정방향 단어가 계수정렬된 리스트에서 \n",
+    "            # 키워드의 길이와 단어의 길이가 같으면서 start와 end 사이에 들어가는 모든 단어들을 슬라이싱한 후 해당 단어들의 개수를 정답 리스트에 추가\n",
+    "            answer.append(len(words_dict[len(query)][bisect.bisect_left(words_dict[len(query)], start) : bisect.bisect_right(words_dict[len(query)], end)]))\n",
+    "        else: # 키워드가 '?', 즉 와일드카드로 시작하면\n",
+    "            # 역방향 계수정렬 리스트에서 찾기 위해 키워드도 역방향으로 돌려주고\n",
+    "            query = query[::-1]\n",
+    "            # 와일드카드를 모두 a로 채운 start와, z로 채운 end라는 변수 선언\n",
+    "            start = query.replace('?', 'a')\n",
+    "            end = query.replace('?', 'z')\n",
+    "            \n",
+    "            # bisect를 이용하여 역방향 단어가 계수정렬된 리스트에서\n",
+    "            # 키워드의 길이와 단어의 길이가 같으면서 start와 end 사이에 들어가는 모든 단어들을 슬라이싱한 후 해당 단어들의 개수를 정답 리스트에 추가\n",
+    "            answer.append(len(reversed_words_dict[len(query)][bisect.bisect_left(reversed_words_dict[len(query)], start) : bisect.bisect_right(reversed_words_dict[len(query)], end)]))\n",
+    "    \n",
+    "    # 정답 리스트를 리턴\n",
+    "    return answer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고 (count_by_range() 함수)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "def count_by_range(a, left_value, right_value):\n",
+    "    right_index = bisect_right(a, right_value)\n",
+    "    left_index = bisect_left(a, left_value)\n",
+    "    return right_index - left_index"
+   ]
   }
  ],
  "metadata": {
