--- a/ch8_dynamic_programming.ipynb
+++ b/ch8_dynamic_programming.ipynb
@@ -792,7 +792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q32. 정수 삼각형\n",
+    "## Q32. 정수 삼각형 // RE(풀이 시간 초과)\n",
     "https://www.acmicpc.net/problem/1932"
    ]
   },
@@ -806,7 +806,8 @@
     "* 메모리 제한 128MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* n행 기준, n-1행에서 왼쪽 위에서 오는 것, 위에서 오는 것, 오른쪽 위에서 오는 것을 max()하기. 이 때 행의 첫 열과 끝 열에 있는 경우는 예외 처리가 필요\n",
+    "* 문제를 잘못 봤다. 삼각형의 형태를 제대로 안 보고 문제를 풀었다. 그러니 답이 안 나오지. => 그림상 왼쪽 위(리스트 상 왼쪽 위), 오른쪽 위(리스트 상 바로 위)를 고려해야 함"
    ]
   },
   {
@@ -814,10 +815,10 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* O(n^2). n은 최대 500이므로 시간 내에 해결 가능\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* tri라는 변수를 안 쓰고 바로 dp_table에 넣어서 해도 된다. 그게 메모리 면에서 더 효율적."
    ]
   },
   {
@@ -825,7 +826,74 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "7\n",
+    "3 8 /\n",
+    "8 1 0 /\n",
+    "2 7 4 4 /\n",
+    "4 5 2 6 5 /\n",
+    "'''\n",
+    "\n",
+    "'''\n",
+    "7\n",
+    "10 15\n",
+    "18 16 15\n",
+    "20 25 20 19\n",
+    "24 30 27 26 24\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 삼각형의 크기 n 입력\n",
+    "n = int(input())\n",
+    "\n",
+    "# 정수 삼각형의 정보 입력\n",
+    "tri = []\n",
+    "for _ in range(n):\n",
+    "    tri.append(list(map(int, input().split())))\n",
+    "\n",
+    "# dp 테이블 초기화\n",
+    "dp_table = [[] for _ in range(n)]\n",
+    "\n",
+    "# dp 테이블의 첫 행을 정수 삼각형의 첫 행으로 초기화\n",
+    "dp_table[0] = tri[0]\n",
+    "\n",
+    "# dp 진행\n",
+    "# 두번째 행부터 끝 행까지 돌면서\n",
+    "for i in range(1, n):\n",
+    "    # 첫 번째 열부터 끝 열까지 돌면서\n",
+    "    for j in range(i+1):\n",
+    "        # 첫 열이면 왼쪽 위에서 오는 게 없으므로 0, 아니라면 이전까지 제일 컸던 값으로\n",
+    "        if j == 0:\n",
+    "            left_up = 0\n",
+    "        else:\n",
+    "            left_up = dp_table[i-1][j-1]\n",
+    "        # 끝 열이면 오른쪽 위에서 오는 게 없으므로 0, 아니라면 이전까지 제일 컸던 값으로\n",
+    "        if j == i:\n",
+    "            right_up = 0\n",
+    "        else:\n",
+    "            right_up = dp_table[i-1][j]\n",
+    "        \n",
+    "        # 해당 행, 열에서 정수 삼각형에 주어진 값에 이전 경로까지의 가장 컸던 값을 더해 새로 할당\n",
+    "        dp_table[i].append(tri[i][j] + max(left_up, right_up))\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(max(dp_table[n-1]))"
+   ]
   },
   {
    "cell_type": "markdown",
