--- a/ch8_dynamic_programming.ipynb
+++ b/ch8_dynamic_programming.ipynb
@@ -899,7 +899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q33. 퇴사\n",
+    "## Q33. 퇴사 // RE(풀이 시간 초과)\n",
     "https://www.acmicpc.net/problem/14501"
    ]
   },
@@ -913,7 +913,12 @@
     "* 메모리 제한 512MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* (기억의 저편) 뒤에서부터 해야 한다.\n",
+    "* 거꾸로 생각. 남은 시간 내에 할 수 있다면 추가. 더 이전 일정으로 갔을 때 이후 일정에서 하려했던 상담을 빼고 할 수 있는데, 두 경우를 비교해서 더 이익이 되는 것으로 갱신해나가기.\n",
+    "    * (지금 확인하는 상담을 했다고 가정하고, 해당 상담을 한 다음 일정부터의 dp값과 해당 상담을 해서 얻은 이익을 더한 것)과 (현재 확인하는 시점의 하루 뒤의 dp값) 중 높은 것을 선택하면 최적해가 된다.\n",
+    " \n",
+    "* 1시간 40분 정도 걸렸나... 발전이 더딘 것 같아 슬프다.\n",
+    "* 처음에 문제 정리나 설계가 잘 안 된다. 오히려 코드를 쳐보면서 로직 설계와 디버깅이 더 잘 되는 것 같다. 근데 이건 막히면 한도 끝도 없이 막힐 수 있는 방법인 것 같아 걱정이다."
    ]
   },
   {
@@ -921,10 +926,18 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* O(n) 일 듯. N은 최대 15이므로 충분하다.\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 답지는 dp 테이블을 갱신할 때마다 그 값을 max_value라는 변수에 넣어 최댓값을 계속 가져감.\n",
+    "* 나는 현재 확인하는 일자 다음 날의 dp 테이블 값을 계속 가져왔는데, 이는 어차피 뒤에서부터 확인해서 가장 큰 값을 넣게 되므로 성립하는 것."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 과정"
    ]
   },
   {
@@ -932,7 +945,119 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "d(n) = max(d(n + T(n)) + P(n)) (X)\n",
+    "\n",
+    "d(n) = max(d(n + 1), d(n + T(n)) + P(n)) (O)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20, 10, 10, 10, 10, 10, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 일단 만들어 보기\n",
+    "# dp_table = [0] * (N+1)\n",
+    "\n",
+    "# check = N\n",
+    "# for i in range(N-1, -1, -1):\n",
+    "#     if T[i] <= check - i:\n",
+    "#         check = i\n",
+    "#         dp_table[i] = dp_table[i+1] + P[i]\n",
+    "#     else:\n",
+    "#         dp_table[i] = dp_table[i+1]\n",
+    "\n",
+    "# dp_table\n",
+    "\n",
+    "## 1차 - 틀렸습니다\n",
+    "# dp_table = [0] * (N+1)\n",
+    "\n",
+    "# check = N\n",
+    "# for i in range(N-1, -1, -1):\n",
+    "#     if T[i] <= N - i:\n",
+    "#         if dp_table[check] <= dp_table[i + T[i]] + P[i]:\n",
+    "#             check = i\n",
+    "#             dp_table[i] = dp_table[i+ T[i]] + P[i]\n",
+    "#         else:\n",
+    "#             dp_table[i] = dp_table[check] # dp_table[i] = dp_table[i+1]\n",
+    "\n",
+    "# dp_table\n",
+    "\n",
+    "## 2차 - 질문게시판에서 테케 돌려보다 발견\n",
+    "dp_table = [0] * (N+1)\n",
+    "\n",
+    "for i in range(N-1, -1, -1):\n",
+    "    if T[i] <= N - i:\n",
+    "        if dp_table[i+1] <= dp_table[i + T[i]] + P[i]:\n",
+    "            dp_table[i] = dp_table[i+ T[i]] + P[i]\n",
+    "        else:\n",
+    "            dp_table[i] = dp_table[i+1]\n",
+    "    else: ## 이걸 안해주면 중간에 날짜를 넘어가는 상담 일정이 나온 경우 dp_table이 갱신되지 않아 0으로 남아 영향을 미친다.\n",
+    "        dp_table[i] = dp_table[i+1]\n",
+    "\n",
+    "print(dp_table[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 내 정답 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 남은 일수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 일별로 상담을 완료하는 데 걸리는 기간 T와 받을 수 있는 금액 P 입력\n",
+    "T = []\n",
+    "P = []\n",
+    "for _ in range(N):\n",
+    "    t, p = map(int, input().split())\n",
+    "    T.append(t)\n",
+    "    P.append(p)\n",
+    "\n",
+    "# 특정 시점까지의 최대 이익을 담을 dp 테이블 선언\n",
+    "# 정확히는 (인덱스+1)번째 날부터 마지막 날까지 낼 수 있는 최대 이윤\n",
+    "dp_table = [0] * (N+1)\n",
+    "\n",
+    "# 뒤에서부터 확인\n",
+    "for i in range(N-1, -1, -1):\n",
+    "    # 해당 일자의 상담이 기간 안에 끝난다면\n",
+    "    if T[i] <= N - i:\n",
+    "        # (지금까지 계산 해 온 최대 이윤) 혹은 (해당 상담이 끝난 날부터 마지막 날까지의 최대 이윤 + 해당 상담의 이윤) 중 큰 것을 선택하여 dp 테이블 갱신\n",
+    "        ## 어차피 이전 코드에서 사용한 check라는 변수를 뺐으니 이 부분도 max()를 이용하여 한 줄로 줄일 수 있다.\n",
+    "        ## dp_table[i] = max(dp_table[i+ T[i]] + P[i], dp_table[i+1]) => 이런 식으로\n",
+    "        if dp_table[i+1] <= dp_table[i + T[i]] + P[i]:\n",
+    "            dp_table[i] = dp_table[i+ T[i]] + P[i]\n",
+    "        else:\n",
+    "            dp_table[i] = dp_table[i+1]\n",
+    "    # 해당 일자의 상담이 기간 안에 끝나지 않으면 지금까지 계산 해 온 최대 이윤으로 dp 테이블 갱신\n",
+    "    else: ## 이걸 안해주면 중간에 날짜를 넘어가는 상담 일정이 나온 경우 dp_table이 갱신되지 않아 0으로 남아 영향을 미친다.\n",
+    "        dp_table[i] = dp_table[i+1]\n",
+    "\n",
+    "# 뒤에서부터 채워나가므로 dp 테이블의 첫 값이 정답이 됨. 이를 출력.\n",
+    "print(dp_table[0])\n"
+   ]
   },
   {
    "cell_type": "markdown",
