--- a/ch8_dynamic_programming.ipynb
+++ b/ch8_dynamic_programming.ipynb
@@ -792,7 +792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q32. 정수 삼각형 // RE(풀이 시간 초과)\n",
+    "## Q32. 정수 삼각형 // RE(풀이 시간 초과, 질문게시판 테케 참고)\n",
     "https://www.acmicpc.net/problem/1932"
    ]
   },
@@ -915,10 +915,7 @@
     "#### 아이디어\n",
     "* (기억의 저편) 뒤에서부터 해야 한다.\n",
     "* 거꾸로 생각. 남은 시간 내에 할 수 있다면 추가. 더 이전 일정으로 갔을 때 이후 일정에서 하려했던 상담을 빼고 할 수 있는데, 두 경우를 비교해서 더 이익이 되는 것으로 갱신해나가기.\n",
-    "    * (지금 확인하는 상담을 했다고 가정하고, 해당 상담을 한 다음 일정부터의 dp값과 해당 상담을 해서 얻은 이익을 더한 것)과 (현재 확인하는 시점의 하루 뒤의 dp값) 중 높은 것을 선택하면 최적해가 된다.\n",
-    " \n",
-    "* 1시간 40분 정도 걸렸나... 발전이 더딘 것 같아 슬프다.\n",
-    "* 처음에 문제 정리나 설계가 잘 안 된다. 오히려 코드를 쳐보면서 로직 설계와 디버깅이 더 잘 되는 것 같다. 근데 이건 막히면 한도 끝도 없이 막힐 수 있는 방법인 것 같아 걱정이다."
+    "    * (지금 확인하는 상담을 했다고 가정하고, 해당 상담을 한 다음 일정부터의 dp값과 해당 상담을 해서 얻은 이익을 더한 것)과 (현재 확인하는 시점의 하루 뒤의 dp값) 중 높은 것을 선택하면 최적해가 된다."
    ]
   },
   {
@@ -930,7 +927,13 @@
     "\n",
     "#### 해설 본 후\n",
     "* 답지는 dp 테이블을 갱신할 때마다 그 값을 max_value라는 변수에 넣어 최댓값을 계속 가져감.\n",
-    "* 나는 현재 확인하는 일자 다음 날의 dp 테이블 값을 계속 가져왔는데, 이는 어차피 뒤에서부터 확인해서 가장 큰 값을 넣게 되므로 성립하는 것."
+    "* 나는 현재 확인하는 일자 다음 날의 dp 테이블 값을 계속 가져왔는데, 이는 어차피 뒤에서부터 확인해서 가장 큰 값을 넣게 되므로 성립하는 것.\n",
+    "\n",
+    "\n",
+    "#### 사족\n",
+    "* 1시간 40분 정도 걸렸나... 발전이 더딘 것 같아 슬프다.\n",
+    "* 처음에 문제 정리나 설계가 잘 안 된다. 오히려 코드를 쳐보면서 로직 설계와 디버깅이 더 잘 되는 것 같다. 근데 이건 막히면 한도 끝도 없이 막힐 수 있는 방법인 것 같아 걱정이다.\n",
+    "* 그래도 기존에 풀었던 코드보다 훨씬 깔끔해졌다... 이걸 위안 삼아서 더 나아가자."
    ]
   },
   {
@@ -1063,7 +1066,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q34. 병사 배치하기\n",
+    "#### 기존 풀이 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = int(input())\n",
+    "counsel = [[]]\n",
+    "for _ in range(N):\n",
+    "  counsel.append(tuple(map(int, input().split())))\n",
+    "\n",
+    "dp = [0] * (N+1)\n",
+    "\n",
+    "for i in range(N, 0, -1):\n",
+    "  time = counsel[i][0]\n",
+    "  profit = counsel[i][1]\n",
+    "  if i+time == N+1:\n",
+    "    if i == N:\n",
+    "      dp[i] = profit\n",
+    "    else:\n",
+    "      dp[i] = max([dp[j] for j in range(i+1, i+time)] + [profit])\n",
+    "  elif i+time <= N:\n",
+    "    dp[i] = max([dp[j] for j in range(i+1, i+time+1)] + [profit + dp[j] for j in range(i+time, N+1)])\n",
+    "print(max(dp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q34. 병사 배치하기 // RE(풀이 시간 초과, 해결 못 함)\n",
     "https://www.acmicpc.net/problem/18353"
    ]
   },
@@ -1077,7 +1113,12 @@
     "* 메모리 제한 256MB\n",
     "\n",
     "#### 아이디어\n",
-    "* "
+    "* 뒤에서부터 확인하면서 지금 확인하는 것보다 작은 경우 빼면?\n",
+    "    * 안 되지. 가령 뒤 값이 가장 크면 다 빠지게 되잖아.\n",
+    "* 빼는 게 아니라, 뒤에서부터 보면서\n",
+    "* 새로운게 나왔을 때 지금까지의 개수와 그 개수에서의 값을 저장하고, \n",
+    "개수를 1로 리셋하고 진행하면서 값을 계속 그 개수에서의 값과도 비교하기.\n",
+    "개수 값이 이전에 가장 컸던 개수값을 넘어가면 이걸로 교체 // 음 안 된다.."
    ]
   },
   {
@@ -1085,10 +1126,15 @@
    "metadata": {},
    "source": [
     "#### 시간 복잡도\n",
-    "* \n",
+    "* 5트 코드 기준 O(N^2). N이 최대 2,000 이므로 1초 내에 해결 가능\n",
     "\n",
     "#### 해설 본 후\n",
-    "* "
+    "* 중간에 답과 비슷한 로직으로 반복문 두 개 써서 해보려고 했는데... 그냥 해볼 걸... 갑자기 풀 수 있을 것 같은 다른 방법이 떠올라서 그거에 꽂히는 바람에..\n",
+    "* LIS(가장 긴 증가하는 부분 수열)로 푸는 건데. 개념은 기억나는데 구현을 못하네... 개념만 알면 뭐하나, 점화식을 생각 못 해내는데.\n",
+    "\n",
+    "#### 사족\n",
+    "* 그래도 장족의 발전은 문제 풀다 시간 복잡도를 생각했다는 것. 반복문 두 개 쓰려고 시도할 때 N의 개수를 살펴 시간 복잡도 체크를 했다.\n",
+    "* LIS라는 개념은 알아서 비슷한 방식으로 접근하긴 했다. 저번 풀이는 다시 보니까 어질어질하더라..."
    ]
   },
   {
@@ -1096,7 +1142,245 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "15 11 4 8 5 2 4\n",
+    "\n",
+    "4 2 5 8 4 11 15\n",
+    "1 1 2 3 3 4 5\n",
+    "\n",
+    "\n",
+    "30 40 50 1 2 3 4 5\n",
+    "1  2  3  3 3 3 3 3\n",
+    "1  2  3  1 2 3 4 5\n",
+    "\n",
+    "30 40 50 1 2 3 4 60\n",
+    "1  2  3  1 2 3 4 5  \n",
+    "\n",
+    "30 40 50 1 2 60\n",
+    "1  2  3  1 2 3,4\n",
+    "\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 59분까지\n",
+    "\n",
+    "## 1트 - 틀렸습니다.\n",
+    "\n",
+    "# 병사 수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 병사 전투력 정보 입력\n",
+    "fp = list(map(int, input().split()))\n",
+    "\n",
+    "\n",
+    "dp_table = [1] * N\n",
+    "max_dp_i = N-1\n",
+    "\n",
+    "for i in range(len(fp)-2, -1, -1):\n",
+    "    if fp[i] > fp[i+1]:\n",
+    "        if fp[i] > fp[max_dp_i]:\n",
+    "            dp_table[i] = dp_table[max_dp_i] + 1\n",
+    "            if dp_table[i] > dp_table[max_dp_i]:\n",
+    "                max_dp_i = i\n",
+    "\n",
+    "print(N - max(dp_table))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 2트 - 틀렸습니다.\n",
+    "\n",
+    "# 병사 수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 병사 전투력 정보 입력\n",
+    "fp = list(map(int, input().split()))\n",
+    "\n",
+    "\n",
+    "dp_table = [1] * N\n",
+    "max_dp_i = N-1\n",
+    "\n",
+    "for i in range(len(fp)-2, -1, -1):\n",
+    "    if fp[i] > fp[i+1]:\n",
+    "        if fp[i] > fp[max_dp_i]:\n",
+    "            dp_table[i] = dp_table[max_dp_i] + 1\n",
+    "        else:\n",
+    "            dp_table[i] = dp_table[i+1] + 1\n",
+    "        \n",
+    "        if dp_table[i] > dp_table[max_dp_i]:\n",
+    "            max_dp_i = i\n",
+    "\n",
+    "print(N - max(dp_table))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "8\n",
+      "6\n",
+      "5\n",
+      "5\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "0\n",
+      "[12, 2, 5, 3, 2, 10, 8, 7, 15, 5, 4, 3]\n",
+      "[9, 8, 8, 7, 6, 6, 5, 4, 4, 3, 2, 1]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 3트 - 틀렸습니다 // 여기서부터 질문게시판 반례 참고\n",
+    "# 반례 12 / 12 2 5 3 2 10 8 7 15 5 4 3\n",
+    "\n",
+    "# 병사 수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 병사 전투력 정보 입력\n",
+    "fp = list(map(int, input().split()))\n",
+    "\n",
+    "\n",
+    "dp_table = [1] * N\n",
+    "max_dp_i = N-1\n",
+    "\n",
+    "for i in range(N-2, -1, -1):\n",
+    "    if fp[i] > fp[i+1]:\n",
+    "        if fp[i] > fp[max_dp_i]:\n",
+    "            dp_table[i] = dp_table[max_dp_i] + 1\n",
+    "        else:\n",
+    "            dp_table[i] = dp_table[i+1] + 1\n",
+    "    else:\n",
+    "        dp_table[i] = dp_table[i+1]    \n",
+    "                \n",
+    "    if dp_table[i] > dp_table[max_dp_i]:\n",
+    "        max_dp_i = i\n",
+    "        \n",
+    "print(N - max(dp_table))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 6, 6, 6, 6, 6, 5, 4, 4, 3, 2, 1]\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 4트 - 틀렸습니다.\n",
+    "\n",
+    "# 병사 수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 병사 전투력 정보 입력\n",
+    "fp = list(map(int, input().split()))\n",
+    "\n",
+    "dp_table = [1] * N\n",
+    "last_dp_i = N-2\n",
+    "\n",
+    "for i in range(N-2, -1, -1):\n",
+    "    if fp[i] > fp[i+1]:\n",
+    "        if fp[last_dp_i+1] > fp[i]:\n",
+    "            dp_table[i] = dp_table[i+1]\n",
+    "        else:\n",
+    "            dp_table[i] = dp_table[i+1] + 1\n",
+    "            last_dp_i = i\n",
+    "    else:\n",
+    "        dp_table[i] = dp_table[i+1]\n",
+    "\n",
+    "print(N - max(dp_table))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 5트 - 정답이지만 질문 게시판에서 거의 정답 코드를 봐버림\n",
+    "\n",
+    "# 병사 수 N 입력\n",
+    "N = int(input())\n",
+    "\n",
+    "# 병사 전투력 정보 입력\n",
+    "fp = list(map(int, input().split()))\n",
+    "\n",
+    "dp_table = [1] * N\n",
+    "\n",
+    "for i in range(N-2, -1, -1):\n",
+    "    for j in range(i, N):\n",
+    "        if fp[i] > fp[j]:\n",
+    "            dp_table[i] = max(dp_table[i], dp_table[j]+1)\n",
+    "\n",
+    "print(N - max(dp_table))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "array = list(map(int, input().split()))\n",
+    "# 순서를 뒤집어 '가장 긴 증가하는 부분 수열' 문제로 변환\n",
+    "array.reverse()\n",
+    "\n",
+    "# 다이나믹 프로그래밍을 위한 1차원 DP 테이블 초기화\n",
+    "dp = [1] * n\n",
+    "\n",
+    "# 가장 긴 증가하는 부분 수열(LIS) 알고리즘 수행\n",
+    "for i in range(1, n):\n",
+    "    for j in range(0, 1):\n",
+    "        if array[j] < array[i]:\n",
+    "            dp[i] = max(dp[i], dp[j] + 1)\n",
+    "            \n",
+    "# 열외시켜야 하는 병사의 최소 수를 출력\n",
+    "print(n - max(dp))"
+   ]
   }
  ],
  "metadata": {
