--- a/ch8_dynamic_programming.ipynb
+++ b/ch8_dynamic_programming.ipynb
@@ -1341,13 +1341,19 @@
     "# 병사 전투력 정보 입력\n",
     "fp = list(map(int, input().split()))\n",
     "\n",
+    "# dp 테이블 선언 및 모든 값 1로 초기화\n",
     "dp_table = [1] * N\n",
     "\n",
+    "# 뒤에서 두 번째부터 맨 앞까지 거꾸로 확인하면서\n",
     "for i in range(N-2, -1, -1):\n",
+    "    # 현재 확인하는 인덱스 이후의 모든 인덱스 값에 대해\n",
     "    for j in range(i, N):\n",
+    "        # 현재 확인하는 인덱스에 해당하는 전투력이 이후 인덱스에 해당하는 전투력보다 강하다면\n",
     "        if fp[i] > fp[j]:\n",
+    "            # LIS의 개념을 활용하여 현재 인덱스의 dp_table을 (현재 dp_table 값)이나 (이후 인덱스 값의 dp_table값 + 1) 중 큰 것으로 대체\n",
     "            dp_table[i] = max(dp_table[i], dp_table[j]+1)\n",
     "\n",
+    "# 가장 긴 증가하는 부분 수열(LIS) 값을 구하기 위해 dp_table에 max()를 취하고 전체 병사 수에서 이를 빼서 정답 출력\n",
     "print(N - max(dp_table))"
    ]
   },
@@ -1380,6 +1386,314 @@
     "            \n",
     "# 열외시켜야 하는 병사의 최소 수를 출력\n",
     "print(n - max(dp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q35. 못생긴 수 // RE(틀림)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 30분\n",
+    "* 시간 제한 1초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 2^10 = 1024니까, 1000까지는 아무리 2, 3, 5로 나눠도 10번 이상 반복 안 됨\n",
+    "* 5,3,2로 나눌 수 있는 만큼 다 나눠 놓고 마지막 몫값이 못생긴 수 리스트에 있으면 나누기 전의 처음 수를 추가하는 방식으로 하면 될 듯?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* for문으로 짠 코드는 약 O(1000*10), 즉 O(1)일 것 같다. 제약 조건을 이용하여 상수 시간 내에 처리가 가능\n",
+    "* while문으로 짠 코드는 O(10n), 즉 O(n)으로 봐야할 것 같다. 10이 붙은 것도 n이 최대 1,000이므로 2^10을 안 넘어가기 때문이다.\n",
+    "=> 아니다, 최대 값이 1000인게 아니라 n(몇 번째 못생긴 수 인지)이 1000이므로 이렇게 하면 무조건 시간초과다. for문으로 짠 건 당연히 틀렸고, while문으로 짠 건 시간초과다.\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 나는 DP방식이라기 보다는 greedy 방식으로 푼 것 같다... => 푼 게 아니었다...\n",
+    "* 문제를 제대로 읽자... 문제를 잘못 봐서 이전 풀이보다 못한 코드를 냈다.\n",
+    "* 그 때도 똑같은 생각을 하긴 했는데, 새삼 또 느낀다. 어떻게 이런 생각을 하지... 인덱스를 쪼개서 값이랑 맞물리게 해서 돌아가게 하다니...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "1 2 3 4 5 6 8 9 10 12 15 16 18 20\n",
+    "\n",
+    "1 2 3 2*2 5 2*3 2*2*2 3*3 2*5 2*2*3 3*5 2*2*2*2 2*3*3 2*2*5\n",
+    "\n",
+    "1 2 3 4 5 2*3 2*4 3*3 2*5 2*6\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 제약조건을 활용하여 for문으로 푼 풀이\n",
+    "\n",
+    "# n번째 못생긴 수를 찾기 위한 n 입력\n",
+    "n = int(input())\n",
+    "\n",
+    "# 못생긴 수를 담을 리스트 선언. 값은 1을 넣어 초기화.\n",
+    "ugly_num = [1]\n",
+    "\n",
+    "# 2부터 제약 조건인 1000까지 확인하며\n",
+    "for u in range(2, 1001):\n",
+    "    temp = u\n",
+    "    # 현재 확인하는 값이 5로 나누어 떨어지는 만큼 가능한 5로 나누고\n",
+    "    while temp%5 == 0:\n",
+    "        temp //= 5\n",
+    "    # 뒤이은 값이 3으로 나누어 떨어지는 만큼 가능한 3으로 나누고\n",
+    "    while temp%3 == 0:\n",
+    "        temp //= 3\n",
+    "    # 뒤이은 값이 2로 나누어 떨어지는 만큼 가능한 2로 나눈다.\n",
+    "    while temp%2 == 0:\n",
+    "        temp //= 2\n",
+    "    \n",
+    "    # 위의 연산을 거친 값이 못생긴 수 배열에 들어있다면\n",
+    "    if temp in ugly_num:\n",
+    "        # 연산을 거치지 않은 처음에 확인한 값을 못생긴 수 리스트에 추가한다.\n",
+    "        ugly_num.append(u)\n",
+    "\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(ugly_num[n-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "## n을 활용하여 while을 사용한 풀이\n",
+    "\n",
+    "# n번째 못생긴 수를 찾기 위한 n 입력\n",
+    "n = int(input())\n",
+    "\n",
+    "# 못생긴 수를 담을 리스트 선언. 값은 1을 넣어 초기화.\n",
+    "ugly_num = [1]\n",
+    "\n",
+    "# 못생긴 수인지 확인할 값을 선언. 1은 이미 추가했으니 시작은 2부터 한다.\n",
+    "num = 2\n",
+    "# 시간복잡도를 위해 일일이 len()을 하는 게 아니라 못생긴 수 리스트의 길이를 따로 저장한다.\n",
+    "ugly_num_length = 1\n",
+    "\n",
+    "# 못생긴 수 리스트 길이가 n보다 작다면 계속 반복\n",
+    "while ugly_num_length < n:\n",
+    "    temp = num\n",
+    "    # 현재 확인하는 값이 5로 나누어 떨어지는 만큼 가능한 5로 나누고\n",
+    "    while temp%5 == 0:\n",
+    "        temp //= 5\n",
+    "    # 뒤이은 값이 3으로 나누어 떨어지는 만큼 가능한 3으로 나누고\n",
+    "    while temp%3 == 0:\n",
+    "        temp //= 3\n",
+    "    # 뒤이은 값이 2로 나누어 떨어지는 만큼 가능한 2로 나눈다.\n",
+    "    while temp%2 == 0:\n",
+    "        temp //= 2\n",
+    "        \n",
+    "    # 위의 연산을 거친 값이 못생긴 수 배열에 들어있다면\n",
+    "    if temp in ugly_num:\n",
+    "        # 연산을 거치지 않은 처음에 확인한 값을 못생긴 수 리스트에 추가하고\n",
+    "        ugly_num.append(num)\n",
+    "        # 못생긴 수 리스트 길이 변수를 1 늘린다\n",
+    "        ugly_num_length += 1\n",
+    "    \n",
+    "    # 다음 값을 확인하기 위해 기존에 확인한 값에 1을 더한다\n",
+    "    num += 1\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(ugly_num[n-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이전 풀이 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1트: 시간 초과 안하려나..?\n",
+    "# renew를 몇 으로 설정할 건지 정하기 어렵다. \n",
+    "n = int(input())\n",
+    "# n =1000\n",
+    "dp = [1] * 1000\n",
+    "\n",
+    "for i in range(1, n):\n",
+    "  renew = 99999999999\n",
+    "  for j in range(i):\n",
+    "    candidates = []\n",
+    "    two, three, five = dp[j]*2, dp[j]*3, dp[j]*5\n",
+    "    # print(two, three, five)\n",
+    "    if two > dp[i-1]:\n",
+    "      candidates.append(two)\n",
+    "    if three > dp[i-1]:\n",
+    "      candidates.append(three)\n",
+    "    if five > dp[i-1]:\n",
+    "      candidates.append(five)\n",
+    "    \n",
+    "    if candidates:\n",
+    "      renew = min(renew, min(candidates))\n",
+    "  dp[i] = renew\n",
+    "    \n",
+    "# print(dp)\n",
+    "print(dp[n-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 위 코드 renew에 임의의 값 안 쓰고\n",
+    "\n",
+    "n = int(input())\n",
+    "# 못생긴 수 담기 위한 dp테이블 설정\n",
+    "dp = [1] * n\n",
+    "\n",
+    "# 1부터 n까지의 못생긴 수 찾기\n",
+    "for i in range(1, n):\n",
+    "  # i번째 못생긴 수를 담을 변수 설정. 초기화는 우선 가장 큰 값으로.\n",
+    "  renew = dp[i-1]*3 # 무조건 dp[i-1]*2보단 크니까 최악의 경우여도 다음 값이 이것보다 클 수 없으니 성립\n",
+    "  # i번째 못생긴수를 찾기 위해 그 전까지의 모든 못생긴 수 값을 j 변수로 받아오며 반복\n",
+    "  for j in range(i):\n",
+    "    # i번째 못생긴 수가 될 수 있는 후보군을 담기 위한 리스트 선언\n",
+    "    candidates = []\n",
+    "    # j번째 못생긴 수에 2, 3, 5를 곱함\n",
+    "    two, three, five = dp[j]*2, dp[j]*3, dp[j]*5\n",
+    "    # print(two, three, five)\n",
+    "    \n",
+    "    # 곱한 각각의 수가 i-1번째 못생긴 수보다 크다면 후보군에 추가\n",
+    "    if two > dp[i-1]:\n",
+    "      candidates.append(two)\n",
+    "    if three > dp[i-1]:\n",
+    "      candidates.append(three)\n",
+    "    if five > dp[i-1]:\n",
+    "      candidates.append(five)\n",
+    "    \n",
+    "    # 후보군에 원소가 하나라도 있으면\n",
+    "    if candidates:\n",
+    "      # i번째 못생긴 수를 후보군 중 가장 작은 수로 갱신\n",
+    "      renew = min(renew, min(candidates))\n",
+    "  # i번째 이전의 모든 못생긴 수에 대해 위 연산을 통해 확인했다면 최종적으로 나온 값을 i번째 못생긴 수로 할당\n",
+    "  dp[i] = renew\n",
+    "\n",
+    "# 정답 출력    \n",
+    "# print(dp)\n",
+    "print(dp[n-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 해설 코드 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51200000\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "ugly = [0] * n # 못생긴 수를 담기 위한 테이블(1차원 DP 테이블)\n",
+    "ugly[0] = 1 # 첫 번째 못생긴 수는 1\n",
+    "\n",
+    "# 2배, 3배, 5배를 위한 인덱스\n",
+    "i2 = i3 = i5 = 0\n",
+    "# 처음에 곱셈값을 초기화\n",
+    "next2, next3, next5 = 2, 3, 5\n",
+    "\n",
+    "# 1부터 n까지의 못생긴 수를 찾기\n",
+    "for l in range(1, n):\n",
+    "    # 가능한 곱셈 결과 중에서 가장 작은 수를 선택\n",
+    "    ugly[l] = min(next2, next3, next5)\n",
+    "    # 인덱스에 따라서 곱셈 결과를 증가\n",
+    "    ## 셋 중 가장 작은 것을 고르고, 그 가장 작은 것이 셋 중 어느 것이었냐에 따라 각각 트랙을 나눠 2, 3, 5배 하며 반복\n",
+    "    if ugly[l] == next2:\n",
+    "        i2 += 1\n",
+    "        next2 = ugly[i2] * 2\n",
+    "    if ugly[l] == next3: ## elif 처리하면 중복이 발생하여 원하는 결과가 나오지 않게 된다.\n",
+    "        i3 += 1\n",
+    "        next3 = ugly[i3] * 3\n",
+    "    if ugly[l] == next5: ## elif 처리하면 중복이 발생하여 원하는 결과가 나오지 않게 된다.\n",
+    "        i5 += 1\n",
+    "        next5 = ugly[i5] * 5\n",
+    "        \n",
+    "# n번째 못생긴 수를 출력\n",
+    "print(ugly[n-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q36. 편집 거리"
    ]
   }
  ],
