resolve Q36 & update readme

--- a/ch8_dynamic_programming.ipynb
+++ b/ch8_dynamic_programming.ipynb
@@ -1392,7 +1392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q35. 못생긴 수 // RE(틀림)"
+    "## Q35. 못생긴 수 // RE(제한 시간 초과(틀림))"
    ]
   },
   {
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1690,10 +1690,151 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "l / next2 3 5 / i2 i3 i5\n",
+    "0 / 1\n",
+    "1 / (2) 3 5 / 1 0 0\n",
+    "2 / 4 (3) 5 / 1 1 0\n",
+    "3 / (4) 6 5 / 2 1 0\n",
+    "4 / 6 6 (5) / 2 1 1\n",
+    "5 / (6) (6) 10 / 3 2 1\n",
+    "6 / (8) 9 10 / 4 2 1\n",
+    "7 /  10 (9) 10 / 4 3 1 \n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q36. 편집 거리"
+    "## Q36. 편집 거리 // RE(풀이 시간 초과, 틀림(인덱싱 유의할 것!!!!))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 제한\n",
+    "* 풀이 시간 30분\n",
+    "* 시간 제한 2초\n",
+    "* 메모리 제한 128MB\n",
+    "\n",
+    "#### 아이디어\n",
+    "* 레벤슈타인 거리.. 구현해보자.\n",
+    "* elephant/relevant 반례를 찾아보고야(elephant만 생각나서 예시만 찾아봄. 로직을 보진 않았다.) 정확한 로직을 기억해냄\n",
+    "    * 빈칸 자리를 놔줬어야 했다. => 1열과 1행은 0~index로 채우고 (1, 1)부터 계산하기\n",
+    "* 행인지 열인지를 주의해서 인덱싱하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시간 복잡도\n",
+    "* O(len(A) * len(B)).\n",
+    "* 두 문자열 각각의 최대 길이는 5,000이므로 2초 내에 해결 가능하다\n",
+    "\n",
+    "#### 해설 본 후\n",
+    "* 아 맞은 줄 알았는데 틀렸다. 인덱스를 항상 신경 쓰고, 반례를 생각하자.\n",
+    "* 비효율적으로 짠 부분이 있었다.\n",
+    "* 무슨 개념을 활용해서 풀어야 하는 지는 아는데 왜 풀지를 못하니... 개념과 로직을 확실히 머리에 익혀두자..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "  s u n d a y\n",
+    "s 0 1 2 3 4 5\n",
+    "a 1 1 2 3 3 4\n",
+    "t 2 . 2 . . .\n",
+    "u 3 . . 3 . .\n",
+    "r 4 . . . 4 .\n",
+    "d 5 . . . . 5\n",
+    "a 6 . . . . . \n",
+    "y 7 . . . . .\n",
+    "\n",
+    "\n",
+    "  d o g\n",
+    "c 1 2 3\n",
+    "a 2 2 3\n",
+    "t 3 3 3\n",
+    "\n",
+    "  c a t\n",
+    "c 0 1 2\n",
+    "u 1 1 2\n",
+    "t 2 2 1\n",
+    "\n",
+    "  c a t\n",
+    "c 0 1 2\n",
+    "a 1 0 1\n",
+    "p 2 1 1\n",
+    "\n",
+    "    e l e p h a n t\n",
+    "  0 1 2 3 4 5 6 7 8\n",
+    "r 1 1 2 3 4 5 6 7 8\n",
+    "e 2 1 2 3 4 5 6 7 8\n",
+    "l 3 2 1 \n",
+    "e 4\n",
+    "v 5\n",
+    "a 6 \n",
+    "n 7\n",
+    "t 8\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 빈칸을 추가해 줄때 dp_table을 선언할 때만 추가하고 다른 부분에서 인덱스 수정을 안 했다...\n",
+    "## 공교롭게도 elephant/relevant는 그렇게 해도 정답이 나와서 체크하지 못했다. 꼼꼼히 보자.\n",
+    "\n",
+    "# 문자열 A와 B를 입력\n",
+    "A = input()\n",
+    "B = input()\n",
+    "\n",
+    "a_len = len(A)\n",
+    "b_len = len(B)\n",
+    "\n",
+    "# dp 테이블 선언\n",
+    "dp_table = [[0 for _ in range(a_len+1)] for _ in range(b_len+1)]\n",
+    "\n",
+    "# 초기화\n",
+    "for y in range(1, a_len+1): ## 이 부분을 for y in range(1, a_len): 로 했었다.\n",
+    "    dp_table[0][y] = dp_table[0][y-1] + 1 ## 그냥 dp_table[0][y] = y 하면 된다...\n",
+    "\n",
+    "for x in range(1, b_len+1): ## 이 부분을 for x in range(1, b_len): 로 했었다.\n",
+    "    dp_table[x][0] = dp_table[x-1][0] + 1 ## 그냥 dp_table[x][0] = x 하면 된다...\n",
+    "\n",
+    "# dp 진행\n",
+    "for x in range(1, b_len+1): ## 이 부분을 for x in range(1, b_len): 로 했었다.\n",
+    "    for y in range(1, a_len+1): ## 이 부분을 for y in range(1, a_len): 로 했었다.\n",
+    "        if A[y-1] == B[x-1]: ## 이 부분을 if A[y] == B[x]: 로 했었다.\n",
+    "            dp_table[x][y] = dp_table[x-1][y-1]\n",
+    "        else:\n",
+    "            dp_table[x][y] = min(dp_table[x-1][y], dp_table[x][y-1], dp_table[x-1][y-1]) + 1\n",
+    "\n",
+    "# 정답 출력\n",
+    "print(dp_table[b_len][a_len]) ## 이 부분을 print(dp_table[b_len-1][a_len-1]) 로 했었다."
    ]
   }
  ],
