ch9 study & resolve ex1

--- a/ch8_dynamic_programming.ipynb
+++ b/ch8_dynamic_programming.ipynb
@@ -1178,8 +1178,6 @@
     }
    ],
    "source": [
-    "## 59분까지\n",
-    "\n",
     "## 1트 - 틀렸습니다.\n",
     "\n",
     "# 병사 수 N 입력\n",
@@ -1380,7 +1378,7 @@
     "\n",
     "# 가장 긴 증가하는 부분 수열(LIS) 알고리즘 수행\n",
     "for i in range(1, n):\n",
-    "    for j in range(0, 1):\n",
+    "    for j in range(0, i):\n",
     "        if array[j] < array[i]:\n",
     "            dp[i] = max(dp[i], dp[j] + 1)\n",
     "            \n",
@@ -1588,14 +1586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "51200000\n"
      ]
     }
    ],
